<resources>
    <string name="app_name">VioletDroid</string>

    <!--main-->
    <string name="welcome_to_vd">Welcome to VioletDroid</string>
    <string name="uml_editor">Open UML Editor</string>


    <!--Class Diagram-->
    <string name="class_str">Class</string>
    <string name="class_diag_enter_title">Enter Class Information</string>
    <string name="class_diag_edit_title">Edit Class Information</string>
    <string name="class_diag_enter_title_hint">Class Name</string>
    <string name="class_diag_enter_attrs_hint">Attributes</string>
    <string name="class_diag_enter_methods_hint">Methods</string>
    <string name="class_diag_err_missing_title">The Class Diagram Item must have a title that is not blank.</string>
    <string name="class_diag_err_name_exists">A Class item with that name already exists.
            Please choose a new name.</string>

    <!--Notes-->
    <string name="note_str">Note</string>
    <string name="note_enter_title">Enter Note Text</string>
    <string name="note_edit_title">Edit Note Text</string>
    <string name="note_enter_text_hint">Note Text</string>

    <!--Saving and Loading-->
    <string name="overwrite_dialog_title">File Already Exists</string>
    <string name="overwrite_dialog_body">The already exists, would you like to overwrite it?</string>
    <string name="save">Save</string>
    <string name="save_successful">Save successful</string>
    <string name="save_as">Save As&#8230;</string>
    <string name="save_error">Error saving. Please try again</string>

    <string name="export">Export</string>
    <string name="export_dialog_title">Export Image</string>
    <string name="export_dialog_body">Enter a name for the image.</string>
    <string name="export_success_toast">Image saved to your gallery.</string>

    <string name="load">Load</string>
    <string name="pick_file_title">Pick a File</string>
    <string name="load_list_error">Could not load items</string>
    <string name="load_error">Error loading. Please try again</string>
    <string name="file_name_hint">Enter File Name</string>
    <string name="changes_pending_dialog_title">Changes Pending</string>
    <string name="changes_pending_dialog_body">You have unsaved changes, are you sure you want to continue?</string>
    <string name="no_violet_items_dialog_title">No Saved Files</string>
    <string name="no_violet_items_dialog_body">There are no VioletDroid files saved on your device.</string>
    <string name="empty_diagram_dialog_title">Empty Diagram</string>
    <string name="empty_diagram_dialog_body">Your diagram is empty. Please add items to it before saving.</string>

    <string name="delete">Delete</string>
    <string name="new_str">New</string>

    <string name="file_more">File&#8230;</string>
    <string name="file">File</string>
    <string-array name="file_options">
        <item>New</item>
        <item>Load</item>
        <item>Save</item>
        <item>Save As&#8230;</item>
        <item>Export</item>
    </string-array>


    <string name="new_class_diagram_dialog_title">New Class Diagram</string>
    <string name="new_class_diagram_dialod_body">Reset the working area and make a new class diagram?</string>

    <!--Arrow-->
    <string name="arrow_dialog_title">Arrow Properties</string>
    <string name="arrow_start_head">Start Head Type</string>
    <string name="arrow_end_head">End Head Type</string>
    <string name="arrow_line_style">Line Style</string>
    <string-array name="arr_head_types">
        <item>Empty</item>
        <item>V</item>
        <item>Triangle Outline</item>
        <item>Triangle Filled</item>
        <item>Diamond Outline</item>
        <item>Diamond Filled</item>
    </string-array>
    <string-array name="arr_line_types">
        <item>Solid</item>
        <item>Dashed</item>
    </string-array>

    <string name="arrow">Arrow</string>
    <string name="arrow_start">Tap the item where the arrow should start from.</string>
    <string name="arrow_end">Tap the item where the arrow should end.</string>
    <string name="arrow_deselect">Please deselect items before adding an arrow</string>

    <!--Misc-->
    <string name="ok_str">OK</string>
    <string name="cancel_str">Cancel</string>
    <string name="no_str">No</string>
    <string name="yes_str">Yes</string>
    <string name="done_str">Done</string>


</resources>
