<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.violetdroidapplication.SequenceDiagramEditorActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seq_diag_editor_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CLASS"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/seq_diag_editor_file"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/file"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/seq_diag_editor_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/arrow"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/seq_diag_editor_btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button 4"
                style="@style/Widget.AppCompat.Button.Colored" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seq_diag_editor_btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button5"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/seq_diag_editor_bnt6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button 6"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/seq_diag_editor_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="note"
                style="@style/Widget.AppCompat.Button.Colored" />

            <Button
                android:id="@+id/seq_diag_editor_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete"
                style="@style/Widget.AppCompat.Button.Colored" />


        </LinearLayout>

    </LinearLayout>

    <com.example.violetdroidapplication.ClassDiagEditorView
        android:id="@+id/seq_diag_editor_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.example.violetdroidapplication.ClassDiagEditorView>

</LinearLayout>
